# lightdash-api-examples

./: README.md  delete_empty_space.py
javascript/: README.md  rename_models_in_charts.js
python/: .gitignore  README.md  assign_project_access_to_user_list.py  delete_empty_space.py  example1_copy_space.py  example2_update_user_attributes.py  find_dashboards.py  generate_space_tree.py  get_all_organization_groups.py  get_all_organization_users.py  get_complete_project_access.py  main.py  preview_purge.py  pyproject.toml
python/lightdash/: api_client.py
