[tool.poetry]
name = "lightdash-api-client"
version = "0.1.0"
description = ""
authors = ["oliverlaslett <olaslett@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7"
requests = ">=2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
